[project]
name = "library-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.128.8",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.34",
    "uvicorn>=0.39.0",
]
